tests/NormalTests/paczka1/small_fuzzy/66555483.err
Error in line 8: Rpc4LdF A304 6,3
Error in line 10: bwAXm77AE S75 27,7
